CNSDEVCOLECT/force-app/main/default/objects/Producto_Banco__c/Producto_Banco__c.object-meta.xml
<CustomObject>
    <label>Producto de Banco</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos de Banco</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>