CNSDEVCOLECT/force-app/main/default/objects/Producto_Banco__c/fields/Banca_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Banca_Nectia__c</fullName>
    <label>Banca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Personas</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Empresas</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Finanzas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>