CNSDEVCOLECT/force-app/main/default/objects/Producto_Banco__c/fields/Descripcion_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Nectia__c</fullName>
    <label>Descripción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>