CNSDEVCOLECT/force-app/main/default/objects/Producto_Banco__c/fields/Id_Interno_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Id_Interno_Nectia__c</fullName>
    <externalId>true</externalId>
    <label>Id Interno</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>