CNSDEVCOLECT/force-app/main/default/objects/Producto_Banco__c/fields/Sistema_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Sistema_Nectia__c</fullName>
    <label>Sistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>BACFACTORING</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>BACFWDMONEX</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>BACSWAP</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>BACTRADERMONEX</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>BOLETAS GARANTIAS</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>COMEX</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>FISA</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>LEASING</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>MOTORDEPAGO</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>SPOT</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>TCRCA</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>TECNOCOM</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>NEXUS</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>VVT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>