CNSDEVCOLECT/force-app/main/default/objects/Producto_Banco__c/fields/Tipo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nectia__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Banca_Nectia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleta De Garantia</fullName>
            </value>
            <value>
                <fullName>Boletas</fullName>
            </value>
            <value>
                <fullName>Comex</fullName>
            </value>
            <value>
                <fullName>Crédito Comercial</fullName>
            </value>
            <value>
                <fullName>Crédito Complementario</fullName>
            </value>
            <value>
                <fullName>Crédito de Consumo</fullName>
            </value>
            <value>
                <fullName>Crédito Especiales</fullName>
            </value>
            <value>
                <fullName>Crédito hipotecario</fullName>
            </value>
            <value>
                <fullName>Crédito Pensionado</fullName>
            </value>
            <value>
                <fullName>Cuenta Corriente</fullName>
            </value>
            <value>
                <fullName>Cuentas Por Cobrar Gop</fullName>
            </value>
            <value>
                <fullName>Cuenta Vista</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>Factoring</fullName>
            </value>
            <value>
                <fullName>Forward</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Línea de crédito</fullName>
            </value>
            <value>
                <fullName>Línea De Sobregiro</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Swap</fullName>
            </value>
            <value>
                <fullName>Tarjeta de crédito</fullName>
            </value>
            <value>
                <fullName>Tarjeta de Débito</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Abono de Remuneraciones</fullName>
                <isActive>false</isActive>
                <label>Abono de Remuneraciones</label>
            </value>
            <value>
                <fullName>Comercio Exterior</fullName>
                <isActive>false</isActive>
                <label>Comercio Exterior</label>
            </value>
            <value>
                <fullName>Compra y Venta de Monedas</fullName>
                <isActive>false</isActive>
                <label>Compra y Venta de Monedas</label>
            </value>
            <value>
                <fullName>Créditos Universales</fullName>
                <isActive>false</isActive>
                <label>Créditos Universales</label>
            </value>
            <value>
                <fullName>Cuenta Preferente</fullName>
                <isActive>false</isActive>
                <label>Cuenta Preferente</label>
            </value>
            <value>
                <fullName>Cuentas para cobrar Gop</fullName>
                <isActive>false</isActive>
                <label>Cuentas para cobrar Gop</label>
            </value>
            <value>
                <fullName>Depósito a Plazo Online</fullName>
                <isActive>false</isActive>
                <label>Depósito a Plazo Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>