CNSDEVCOLECT/force-app/main/default/objects/Producto_Banco__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Descripcion_Nectia__c</columns>
    <columns>Banca_Nectia__c</columns>
    <columns>Estado_Nectia__c</columns>
    <columns>Id_Interno_Nectia__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Sistema_Nectia__c</columns>
    <columns>Tipo_Nectia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>